--- a/views/user/men.ejs
+++ b/views/user/men.ejs
@@ -109,7 +109,7 @@
 					  <div class="col-lg-4 mb-4 text-center">
 						<div class="product-entry border">
 						  <a href="#" class="prod-img">
-							<img src="/uploads/products/<%= product.image[0] %>" class="img-fluid" alt="<%= product.name %>">
+							<img src="/uploads/products/<%= product.image[0] %>" class="img-fluid" style="height: 250px; width: 250px;" alt="<%= product.name %>">
 						  </a>
 						  <div class="desc">
 							<h2><a href="/product-details?productId=<%= product._id %>"><%= product.name %></a></h2>
@@ -161,4 +161,3 @@
 
 	</body>
 </html>
-
