--- a/public/frontendassets/css/main.css
+++ b/public/frontendassets/css/main.css
@@ -9922,3 +9922,7 @@ span.fi-rs-apps {
 .zoomContainer{ z-index: 9999;}
 .zoomWindow{ z-index: 9999;}
 /*# sourceMappingURL=main.css.map */
+
+.padding-custom{
+  padding: 30px 100px;
+}
