--- a/views/user/product-details.ejs
+++ b/views/user/product-details.ejs
@@ -48,25 +48,27 @@
                                         <span class="zoom-icon"><i class="fi-rs-search"></i></span>
                                         <!-- MAIN SLIDES -->
                                         <div class="product-image-slider">
-                                            <figure class="border-radius-10">
+                                           
+                                            <figure class="border-radius-10 " >
                                                 <img src="/uploads/products/<%= products.image[0] %>" alt="product image">
                                             </figure>
-                                            <figure class="border-radius-10">
-                                                <img src="frontendassets/imgs/shop/product-16-1.jpg" alt="product image">
+                                        
+                                             <figure class="border-radius-10 ">
+                                                <img src="/uploads/products/<%= products.image[1] %>" alt="product image">
                                             </figure>
                                             <figure class="border-radius-10">
-                                                <img src="frontendassets/imgs/shop/product-16-3.jpg" alt="product image">
+                                                <img src="/uploads/products/<%= products.image[2] %>" alt="product image">
                                             </figure>
                                             <figure class="border-radius-10">
-                                                <img src="frontendassets/imgs/shop/product-16-4.jpg" alt="product image">
-                                            </figure>
+                                                <img src="/uploads/products/<%= products.image[3] %>" alt="product image">
+                                            </figure> 
                                         </div>
                                         <!-- THUMBNAILS -->
                                         <div class="slider-nav-thumbnails pl-15 pr-15">
-                                            <div><img src="/uploads/products/<%= products.image[1] %>" alt="product image"></div>
-                                            <div><img src="/uploads/products/<%= products.image[2] %>" alt="product image"></div>
-                                            <div><img src="/uploads/products/<%= products.image[3] %>" alt="product image"></div>
-                                            <div><img src="/uploads/products/<%= products.image[0] %>" alt="product image"></div>
+                                            <div><img src="/uploads/products/<%= products.image[1] %>" width="70" height="70" alt="product image"></div>
+                                            <div><img src="/uploads/products/<%= products.image[2] %>" width="70" height="70" alt="product image"></div>
+                                            <div><img src="/uploads/products/<%= products.image[3] %>" width="70" height="70" alt="product image"></div>
+                                            <div><img src="/uploads/products/<%= products.image[0] %>" width="70" height="70" alt="product image"></div>
                                             
                                         </div>
                                     </div>
