add address is done

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -30,7 +30,7 @@
                         <li class="has-dropdown">
                             <a href="/account">Account</a>
                             <ul class="dropdown">
-                                <li><a href="/profile">Profile</a></li>
+                                <li><a href="/account">Profile</a></li>
                                 <li><a href="/logout">Logout</a></li>
                             </ul>
                         </li>
