--- a/views/user/account.ejs
+++ b/views/user/account.ejs
@@ -1,317 +1,224 @@
-<!DOCTYPE HTML>
-<html>
-	<head>
-	<title>Footwear - Free Bootstrap 4 Template by Colorlib</title>
-   <meta charset="utf-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<head>
+   
+	<style>
+        body {
+            margin-top: 20px;
+            color: #1a202c;
+            text-align: left;
+            background-color: #e2e8f0;
+        }
+    
+        .main-body {
+            padding: 15px;
+        }
+    
+        .card {
+            box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .1), 0 1px 2px 0 rgba(0, 0, 0, .06);
+        }
 
-  <!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
-	<meta name="twitter:title" content="" />
-	<meta name="twitter:image" content="" />
-	<meta name="twitter:url" content="" />
-	<meta name="twitter:card" content="" />
+        .card {
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            min-width: 0;
+            word-wrap: break-word;
+            background-color: #fff;
+            background-clip: border-box;
+            border: 0 solid rgba(0, 0, 0, .125);
+            border-radius: .25rem;
+        }
+    
+        .card-body {
+            flex: 1 1 auto;
+            min-height: 1px;
+            padding: 1rem;
+        }
+    
+        .gutters-sm {
+            margin-right: -8px;
+            margin-left: -8px;
+        }
+    
+        .gutters-sm>.col,
+        .gutters-sm>[class*=col-] {
+            padding-right: 8px;
+            padding-left: 8px;
+        }
+    
+        .mb-3,
+        .my-3 {
+            margin-bottom: 1rem !important;
+        }
+    
+        .bg-gray-300 {
+            background-color: #e2e8f0;
+        }
+    
+        .h-100 {
+            height: 100% !important;
+        }
+    
+        .shadow-none {
+            box-shadow: none !important;
+        }
+    </style> 
 
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Rokkitt:100,300,400,700" rel="stylesheet">
-	
-	<!-- Animate.css -->
-	<link rel="stylesheet" href="css/animate.css">
-	<!-- Icomoon Icon Fonts-->
-	<link rel="stylesheet" href="css/icomoon.css">
-	<!-- Ion Icon Fonts-->
-	<link rel="stylesheet" href="css/ionicons.min.css">
-	<!-- Bootstrap  -->
-	<link rel="stylesheet" href="css/bootstrap.min.css">
 
-	<!-- Magnific Popup -->
-	<link rel="stylesheet" href="css/magnific-popup.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
-	<!-- Flexslider  -->
-	<link rel="stylesheet" href="css/flexslider.css">
+</head>
 
-	<!-- Owl Carousel -->
-	<link rel="stylesheet" href="css/owl.carousel.min.css">
-	<link rel="stylesheet" href="css/owl.theme.default.min.css">
-	
-	<!-- Date Picker -->
-	<link rel="stylesheet" href="css/bootstrap-datepicker.css">
-	<!-- Flaticons  -->
-	<link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
 
-	<!-- Theme style  -->
-	<link rel="stylesheet" href="css/style.css">
-
-	</head>
-	<body>
-		
-	<div class="colorlib-loader"></div>
-
-	<div id="page">
-		<%-include('../partials/nav')  %>
-		<!-- <nav class="colorlib-nav" role="navigation">
-			<div class="top-menu">
-				<div class="container">
-					<div class="row">
-						<div class="col-sm-7 col-md-9">
-							<div id="colorlib-logo"><a href="index.html">Footwear</a></div>
-						</div>
-						<div class="col-sm-5 col-md-3">
-			            <form action="#" class="search-wrap">
-			               <div class="form-group">
-			                  <input type="search" class="form-control search" placeholder="Search">
-			                  <button class="btn btn-primary submit-search text-center" type="submit"><i class="icon-search"></i></button>
-			               </div>
-			            </form>
-			         </div>
-		         </div>
-					<div class="row">
-						<div class="col-sm-12 text-left menu-1">
-							<ul>
-								<li><a href="index.html">Home</a></li>
-								<li class="has-dropdown">
-									<a href="men.html">Men</a>
-									<ul class="dropdown">
-										<li><a href="product-detail.html">Product Detail</a></li>
-										<li><a href="cart.html">Shopping Cart</a></li>
-										<li><a href="checkout.html">Checkout</a></li>
-										<li><a href="order-complete.html">Order Complete</a></li>
-										<li><a href="add-to-wishlist.html">Wishlist</a></li>
-									</ul>
-								</li>
-								<li><a href="women.html">Women</a></li>
-								<li><a href="about.html">About</a></li>
-								<li class="active"><a href="contact.html">Contact</a></li>
-								<li class="cart"><a href="cart.html"><i class="icon-shopping-cart"></i> Cart [0]</a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
+<section style="background-color: #eee;">
+	<div class="container py-5">
+	  <div class="row">
+		<div class="col">
+		  <nav aria-label="breadcrumb" class="bg-light rounded-3 p-3 mb-4">
+			<ol class="breadcrumb mb-0">
+			  <li class="breadcrumb-item"><a href="/">Home</a></li>
+			  <li class="breadcrumb-item"><a href="#">addresses</li>
+			  <li class="breadcrumb-item active" aria-current="page">addressesfile</li>
+			</ol>
+		  </nav>
+		</div>
+	  </div>
+  
+	  <div class="row">
+		<div class="col-lg-4">
+		  <div class="card mb-4">
+			<div class="card-body text-center">
+			  <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp" alt="avatar"
+				class="rounded-circle img-fluid" style="width: 150px;">
+			  <h5 class="my-3"></h5>
+			  <div class="d-flex justify-content-center mb-2">
+				<button type="button" class="btn btn-primary">Orders</button>
+				<button type="button" class="btn btn-outline-primary ms-1">Wishlist</button>
+			  </div>
 			</div>
-			<div class="sale">
-				<div class="container">
-					<div class="row">
-						<div class="col-sm-8 offset-sm-2 text-center">
-							<div class="row">
-								<div class="owl-carousel2">
-									<div class="item">
-										<div class="col">
-											<h3><a href="#">25% off (Almost) Everything! Use Code: Summer Sale</a></h3>
-										</div>
-									</div>
-									<div class="item">
-										<div class="col">
-											<h3><a href="#">Our biggest sale yet 50% off all summer shoes</a></h3>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
+		  </div>
+		  <!-- side bar -->
+		  <div class="card mb-4 mb-lg-0">
+			<div class="card-body p-0">
+			  <ul class="list-group list-group-flush rounded-3">
+				<li class="list-group-item d-flex justify-content-between align-items-center p-3">
+					<h6 class="mb-0"><a href="/edit-profile" style="text-decoration: none; color: black;">Edit Profile</a></h6>
+				</li>
+				<li class="list-group-item d-flex justify-content-between align-items-center p-3">
+					<h6 class="mb-0"><a href="/change-password"style="text-decoration: none; color: black;">Change Password</a></h6>
+				</li>
+				<li class="list-group-item d-flex justify-content-between align-items-center p-3">
+					<h6 class="mb-0"><a href="/wallet"style="text-decoration: none; color: black;">Wallet</a></h6>
+				</li>
+				<li class="list-group-item d-flex justify-content-between align-items-center p-3">
+					<h6 class="mb-0">Referal Link</h6>
+				</li>
+				<li class="list-group-item d-flex justify-content-between align-items-center p-3">
+					<h6 class="mb-0"><a href="/logout"style="text-decoration: none; color: red;">Logout</a></h6>
+				</li>
+			  </ul>
 			</div>
-		</nav> -->
-
-		<!-- <div class="breadcrumbs">
-			<div class="container">
-				<div class="row">
-					<div class="col">
-						<p class="bread"><span><a href="index.html">Home</a></span> / <span>Contact</span></p>
-					</div>
-				</div>
-			</div>
+		  </div>
+		  <!-- side bar ends -->
 		</div>
 
-
-		<div id="colorlib-contact">
-			<div class="container">
-				<div class="row">
-					<div class="col-sm-12">
-						<h3>Contact Information</h3>
-						<div class="row contact-info-wrap">
-							<div class="col-md-3">
-								<p><span><i class="icon-location"></i></span> 198 West 21th Street, <br> Suite 721 New York NY 10016</p>
-							</div>
-							<div class="col-md-3">
-								<p><span><i class="icon-phone3"></i></span> <a href="tel://1234567920">+ 1235 2355 98</a></p>
-							</div>
-							<div class="col-md-3">
-								<p><span><i class="icon-paperplane"></i></span> <a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
-							</div>
-							<div class="col-md-3">
-								<p><span><i class="icon-globe"></i></span> <a href="#">yoursite.com</a></p>
-							</div>
-						</div>
-					</div>
+		<div class="col-lg-8">
+			<!-- top bar -->
+		  <div class="card mb-4">
+			<div class="card-body">
+			  <div class="row">
+				<div class="col-sm-3">
+				  <p class="mb-0">Full Name</p>
 				</div>
-				<div class="row">
-					<div class="col-md-6">
-						<div class="contact-wrap">
-							<h3>Get In Touch</h3>
-							<form action="#" class="contact-form">
-								<div class="row">
-									<div class="col-md-6">
-										<div class="form-group">
-											<label for="fname">First Name</label>
-											<input type="text" id="fname" class="form-control" placeholder="Your firstname">
-										</div>
-									</div>
-									<div class="col-md-6">
-										<div class="form-group">
-											<label for="lname">Last Name</label>
-											<input type="text" id="lname" class="form-control" placeholder="Your lastname">
-										</div>
-									</div>
-									<div class="w-100"></div>
-									<div class="col-sm-12">
-										<div class="form-group">
-											<label for="email">Email</label>
-											<input type="text" id="email" class="form-control" placeholder="Your email address">
-										</div>
-									</div>
-									<div class="w-100"></div>
-									<div class="col-sm-12">
-										<div class="form-group">
-											<label for="subject">Subject</label>
-											<input type="text" id="subject" class="form-control" placeholder="Your subject of this message">
-										</div>
-									</div>
-									<div class="w-100"></div>
-									<div class="col-sm-12">
-										<div class="form-group">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" cols="30" rows="10" class="form-control" placeholder="Say something about us"></textarea>
-										</div>
-									</div>
-									<div class="w-100"></div>
-									<div class="col-sm-12">
-										<div class="form-group">
-											<input type="submit" value="Send Message" class="btn btn-primary">
-										</div>
-									</div>
-								</div>
-							</form>		
-						</div>
-					</div>
-					<div class="col-md-6">
-						<div id="map" class="colorlib-map"></div>		
-					</div>
+				<div class="col-sm-9">
+				  <p class="text-muted mb-0"></p>
 				</div>
+			  </div>
+			  <hr>
+			  <div class="row">
+				<div class="col-sm-3">
+				  <p class="mb-0">Email</p>
+				</div>
+				<div class="col-sm-9">
+				  <p class="text-muted mb-0"></p>
+				</div>
+			  </div>
+			  <hr>
+			  <div class="row">
+				<div class="col-sm-3">
+				  <p class="mb-0">Phone</p>
+				</div>
+				<div class="col-sm-9">
+				  <p class="text-muted mb-0"></p>
+				</div>
+			  </div>
 			</div>
+		  </div>
+		  <!-- top bar ends -->
+
+		  <div class="row gutters-sm">
+			<div class="col-sm-12 mb-3">
+			  <div class="card h-100">
+				<div class="card-body">
+				  <h6 class="d-flex align-items-center mb-3">
+					<i class="material-icons text-info mr-2">Manage Address</i>
+					<a href="/add-address" class="text-info ms-auto" style="text-align: right;">Add Address</a>
+				  </h6>
+				  <div class="progress mb-3" style="height: 5px">
+					<div class="progress-bar bg-primary" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+				  </div>
+				  <!-- edit address -->
+				  <% if (user.addresses && user.addresses.length > 0) { %>
+					<% user.addresses.forEach(address => { %>
+				  <div class="mt-3 mb-3 bg-light p-2 rounded text-dark">
+					<div class="d-flex align-items-center">
+					  <small class="me-4">FullName:<%= address.name %></small>
+					  <a href="#" class="ms-auto text-dark mt-0" style="margin-left: auto;">
+						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+						  <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
+						</svg>
+					  </a>
+					  <svg aria-hidden="true" onclick="removeAdress('' , '')" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash-fill ml-2 mt-1" viewBox="0 0 16 16">
+						<path d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0z"/>
+					  </svg>
+					</div>
+					<div class="d-flex">
+					  <small class="me-1">Number:<%= address.number %> </small>,
+					  <small>Alt Number: <%= address.altNumber || 'N/A' %></small>
+					</div>
+					<div class="d-flex">
+					  <small>Pincode: <%= address.pinCode %></small>
+					</div>
+					<div class="d-flex">
+					  <small>House:<%= address.house || 'N/A' %></small>
+					</div>
+					<div class="d-flex">
+					  <small class="me-5">Area:<%= address.area %>  </small>
+					  <small>Landmark: <%= address.landmark || 'N/A' %></small>
+					</div>
+					<div class="d-flex">
+					  <small class="me-4">Town: <%= address.town %></small>
+					  <small class="me-4">State:<%= address.state %></small>
+					</div>
+					<% }); %>
+		  <% } %>
+				  </div>
+				  <!-- Edit address ends -->
+				</div>
+			  </div>
+			</div>
+		  </div>
+
+		  
+			  <!-- Display address details -->
+			  
+		  
+		  
+
+			</div>
+
+
 		</div>
-
-		<footer id="colorlib-footer" role="contentinfo">
-			<div class="container">
-				<div class="row row-pb-md">
-					<div class="col footer-col colorlib-widget">
-						<h4>About Footwear</h4>
-						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life</p>
-						<p>
-							<ul class="colorlib-social-icons">
-								<li><a href="#"><i class="icon-twitter"></i></a></li>
-								<li><a href="#"><i class="icon-facebook"></i></a></li>
-								<li><a href="#"><i class="icon-linkedin"></i></a></li>
-								<li><a href="#"><i class="icon-dribbble"></i></a></li>
-							</ul>
-						</p>
-					</div>
-					<div class="col footer-col colorlib-widget">
-						<h4>Customer Care</h4>
-						<p>
-							<ul class="colorlib-footer-links">
-								<li><a href="#">Contact</a></li>
-								<li><a href="#">Returns/Exchange</a></li>
-								<li><a href="#">Gift Voucher</a></li>
-								<li><a href="#">Wishlist</a></li>
-								<li><a href="#">Special</a></li>
-								<li><a href="#">Customer Services</a></li>
-								<li><a href="#">Site maps</a></li>
-							</ul>
-						</p>
-					</div>
-					<div class="col footer-col colorlib-widget">
-						<h4>Information</h4>
-						<p>
-							<ul class="colorlib-footer-links">
-								<li><a href="#">About us</a></li>
-								<li><a href="#">Delivery Information</a></li>
-								<li><a href="#">Privacy Policy</a></li>
-								<li><a href="#">Support</a></li>
-								<li><a href="#">Order Tracking</a></li>
-							</ul>
-						</p>
-					</div>
-
-					<div class="col footer-col">
-						<h4>News</h4>
-						<ul class="colorlib-footer-links">
-							<li><a href="blog.html">Blog</a></li>
-							<li><a href="#">Press</a></li>
-							<li><a href="#">Exhibitions</a></li>
-						</ul>
-					</div>
-
-					<div class="col footer-col">
-						<h4>Contact Information</h4>
-						<ul class="colorlib-footer-links">
-							<li>291 South 21th Street, <br> Suite 721 New York NY 10016</li>
-							<li><a href="tel://1234567920">+ 1235 2355 98</a></li>
-							<li><a href="mailto:info@yoursite.com">info@yoursite.com</a></li>
-							<li><a href="#">yoursite.com</a></li>
-						</ul>
-					</div>
-				</div>
-			</div> -->
-			<div class="copy">
-				<div class="row">
-					<div class="col-sm-12 text-center">
-						<p>
-							<span><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-<!-- Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> -->
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></span> 
-							<!-- <span class="block">Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a> , <a href="http://pexels.com/" target="_blank">Pexels.com</a></span> -->
-						</p>
-					</div>
-				</div>
-			</div>
-		</footer>
+	  </div>
 	</div>
-
-	<!-- <div class="gototop js-top">
-		<a href="#" class="js-gotop"><i class="ion-ios-arrow-up"></i></a>
-	</div> -->
-	
-	<!-- jQuery -->
-	<script src="js/jquery.min.js"></script>
-   <!-- popper -->
-   <script src="js/popper.min.js"></script>
-   <!-- bootstrap 4.1 -->
-   <script src="js/bootstrap.min.js"></script>
-   <!-- jQuery easing -->
-   <script src="js/jquery.easing.1.3.js"></script>
-	<!-- Waypoints -->
-	<script src="js/jquery.waypoints.min.js"></script>
-	<!-- Flexslider -->
-	<script src="js/jquery.flexslider-min.js"></script>
-	<!-- Owl carousel -->
-	<script src="js/owl.carousel.min.js"></script>
-	<!-- Magnific Popup -->
-	<script src="js/jquery.magnific-popup.min.js"></script>
-	<script src="js/magnific-popup-options.js"></script>
-	<!-- Date Picker -->
-	<script src="js/bootstrap-datepicker.js"></script>
-	<!-- Stellar Parallax -->
-	<script src="js/jquery.stellar.min.js"></script>
-	<!-- Google Map -->
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCefOgb1ZWqYtj7raVSmN4PL2WkTrc-KyA&sensor=false"></script>
-	<script src="js/google_map.js"></script>
-	<!-- Main -->
-	<script src="js/main.js"></script>
-
-	</body>
-</html>
-
+  </section>
