--- a/views/user/account.ejs
+++ b/views/user/account.ejs
@@ -78,7 +78,7 @@
 			<ol class="breadcrumb mb-0">
 			  <li class="breadcrumb-item"><a href="/">Home</a></li>
 			  <li class="breadcrumb-item"><a href="#">addresses</li>
-			  <li class="breadcrumb-item active" aria-current="page">addressesfile</li>
+
 			</ol>
 		  </nav>
 		</div>
@@ -90,7 +90,7 @@
 			<div class="card-body text-center">
 			  <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp" alt="avatar"
 				class="rounded-circle img-fluid" style="width: 150px;">
-			  <h5 class="my-3"></h5>
+			  <h5 class="my-3"><%= user.name %></h5>
 			  <div class="d-flex justify-content-center mb-2">
 				<button type="button" class="btn btn-primary">Orders</button>
 				<button type="button" class="btn btn-outline-primary ms-1">Wishlist</button>
@@ -128,7 +128,7 @@
 			<div class="card-body">
 			  <div class="row">
 				<div class="col-sm-3">
-				  <p class="mb-0">Full Name</p>
+				  <p class="mb-0"><%= user.name %></p>
 				</div>
 				<div class="col-sm-9">
 				  <p class="text-muted mb-0"></p>
@@ -137,7 +137,7 @@
 			  <hr>
 			  <div class="row">
 				<div class="col-sm-3">
-				  <p class="mb-0">Email</p>
+				  <p class="mb-0"><%=user.email %></p>
 				</div>
 				<div class="col-sm-9">
 				  <p class="text-muted mb-0"></p>
@@ -146,7 +146,7 @@
 			  <hr>
 			  <div class="row">
 				<div class="col-sm-3">
-				  <p class="mb-0">Phone</p>
+				  <p class="mb-0"><%= user.mobile %></p>
 				</div>
 				<div class="col-sm-9">
 				  <p class="text-muted mb-0"></p>
@@ -178,9 +178,15 @@
 						  <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
 						</svg>
 					  </a>
-					  <svg aria-hidden="true" onclick="removeAdress('' , '')" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash-fill ml-2 mt-1" viewBox="0 0 16 16">
-						<path d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0z"/>
-					  </svg>
+					  <a href="/remove-address/<%= user._id %>/<%= address._id %>" class="text-dark" style="margin-left: 10px;" onclick="removeAddress('<%=user._id%>', '<%=address._id%>')">
+						<svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash-fill ml-2 mt-1" viewBox="0 0 16 16">
+							<path d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0z"/>
+						</svg>
+						
+						
+					</a>
+
+		
 					</div>
 					<div class="d-flex">
 					  <small class="me-1">Number:<%= address.number %> </small>,
@@ -208,17 +214,38 @@
 			  </div>
 			</div>
 		  </div>
-
-		  
-			  <!-- Display address details -->
-			  
-		  
-		  
-
-			</div>
-
+             <!-- Display address details -->
+        </div>
+	
 
 		</div>
 	  </div>
 	</div>
   </section>
+  <script src="https://code.jquery.com/jquery-3.6.4.min.js"
+    integrity="sha256-oP6HI/t1qJD5LsA4cmR6ujmZOdIzHLpJeQq9/SPbqE4="
+    crossorigin="anonymous"></script>
+  
+  <script>
+       function removeAddress(userId,adressId){
+        $.ajax({
+            url:`/remove-address/${userId}/${addressId}`,
+            method:'post',
+            data:{
+                userId:userId,
+                adressId:adressId,
+            },
+            success:(response)=>{
+                if(response == true){
+                    location.reload();;
+                }else{
+                    location.reload();
+                }
+                
+            }
+        })
+    }
+
+  </script>
+
+ 
