cart till adding products done

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -6,7 +6,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-7 col-md-9">
-                    <div id="colorlib-logo"><a href="index.html">Footwear</a></div>
+                    <div id="colorlib-logo"><a href="index.html">Shoes.in</a></div>
                 </div>
                 <div class="col-sm-5 col-md-3">
                     <form action="#" class="search-wrap">
@@ -27,6 +27,8 @@
                         <li><a href="/women">Women</a></li>
                         <li><a href="/kids">Kids</a></li>
                         <li><a href="/product-details">products</a></li>
+                        <li><a href="/cart"><i class="icon-shopping-cart"></i>Cart [0]</a></li>
+                        
                         <li class="has-dropdown">
                             <a href="/account">Account</a>
                             <ul class="dropdown">
@@ -34,7 +36,8 @@
                                 <li><a href="/logout">Logout</a></li>
                             </ul>
                         </li>
-                        <li class="cart"><a href="/cart"><i class="icon-shopping-cart"></i> Cart [0]</a></li>
+                        
+                        
                     </ul>
                 </div>
             </div>
