--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -16,6 +16,7 @@
       href="https://fonts.googleapis.com/css?family=Rokkitt:100,300,400,700"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="frontendassets/css/main.css">
 
     <!-- Animate.css -->
     <link rel="stylesheet" href="css/animate.css" />
@@ -53,7 +54,7 @@
           <div class="container">
             <div class="row">
               <div class="col-sm-7 col-md-9">
-                <div id="colorlib-logo"><a href="index.html">Footwear</a></div>
+                <div id="colorlib-logo"><a href="index.html">Shoes.in</a></div>
               </div>
               <div class="col-sm-5 col-md-3">
                 <form action="#" class="search-wrap">
@@ -259,30 +260,46 @@
           
 
           <!-- dynamic products -->
-          <div class="col-lg-9 col-xl-9">
-            <div class="row row-pb-md">
+          <div class="tab-pane fade show active" id="tab-one" role="tabpanel" aria-labelledby="tab-one">
+            <div class="row product-grid-4 padding-custom">
               <% products.forEach(product => { %>
-              <div class="col-lg-4 mb-4 text-center">
-                <div class="product-entry border">
-                  <a href="#" class="prod-img">
-                    <img
-                      src="/uploads/products/<%= product.image[0] %>"
-                      class="img-fluid"
-                      alt="<%= product.name %>"
-                    />
-                  </a>
-                  <div class="desc">
-                    <h2><a href="#"><%= product.name %></a></h2>
-                    <span class="price">$<%= product.salePrice %></span>
+              <div class="col-lg-3 col-md-4 col-12 col-sm-6">
+                <div class="product-cart-wrap mb-30">
+                  <div class="product-img-action-wrap">
+                    <div class="product-img product-img-zoom">
+                      <a href="#">
+                        <img class="default-img" src="/uploads/products/<%= product.image[0] %>" style="height: 270px; width: 270px;"  alt="">
+                        <img class="hover-img" src="frontendassets/imgs/shop/product-1-2.jpg" alt="">
+                      </a>
+                    </div>
+                    <div class="product-action-1">
+                      <a aria-label="Quick view" class="action-btn hover-up" data-bs-toggle="modal" data-bs-target="#quickViewModal"><i class="fi-rs-eye"></i></a>
+                      <a aria-label="Add To Wishlist" class="action-btn hover-up" href="shop-wishlist.html"><i class="fi-rs-heart"></i></a>
+                      <a aria-label="Compare" class="action-btn hover-up" href="shop-compare.html"><i class="fi-rs-shuffle"></i></a>
+                    </div>
+                    
+                  </div>
+                  <div class="product-content-wrap">
+                    <div class="product-category">
+                      <a href="shop-grid-right.html">Shoes</a>
+                    </div>
+                    <h2><a href="/product-details?productId=<%= product._id %>"><%= product.name %></a></h2>
+                    
+                    <div class="product-price">
+                      <span><%= product.regularPrice %></span>
+                      <span class="old-price">$245.8</span>
+                    </div>
+                    <div class="product-action-1 show">
+                      <a aria-label="Add To Cart" class="action-btn hover-up" href="shop-cart.html"><i class="fi-rs-shopping-bag-add"></i></a>
+                    </div>
                   </div>
                 </div>
               </div>
-              <% }); %>
+                         <% });  %>
             </div>
-            <div class="row">
-              <!-- Pagination or other content can be added here -->
-            </div>
+            <!--End product-grid-4-->
           </div>
+    
           <!-- dynamic products end -->
 
           <div class="row">
