--- a/views/user/product-details.ejs
+++ b/views/user/product-details.ejs
@@ -76,7 +76,9 @@
                                 </div>
                                 <div class="col-md-6 col-sm-12 col-xs-12">
                                     <div class="detail-info">
-                                        <h2 class="title-detail">SHOES</h2>
+                                        <form action="/cart" method="post">
+                                        <input type="hidden" name="productId" value="<%= products._id %>">
+                                        <h2 class="title-detail"><%= products.name %></h2>
                                         <div class="product-detail-rating">
                                             
                                             <div class="product-rate-cover text-end">
@@ -89,8 +91,8 @@
                                         </div>
                                         <div class="clearfix product-price-cover">
                                             <div class="product-price primary-color float-left">
-                                                <ins><span class="text-brand">$120.00</span></ins>
-                                                <ins><span class="old-price font-md ml-15">$200.00</span></ins>
+                                                <ins><span class="text-brand"><%= products.salePrice %></span></ins>
+                                                <ins><span class="old-price font-md ml-15">$5000.00</span></ins>
                                                 <span class="save-price  font-md color3 ml-15">25% Off</span>
                                             </div>
                                         </div>
@@ -100,7 +102,7 @@
                                         </div>
                                         <div class="product_sort_info font-xs mb-30">
                                             <ul>
-                                                <li class="mb-10"><i class="fi-rs-crown mr-5"></i> 1 Year AL Jazeera Brand Warranty</li>
+                                                <li class="mb-10"><i class="fi-rs-crown mr-5"></i> 1 Year Brand Warranty</li>
                                                 <li class="mb-10"><i class="fi-rs-refresh mr-5"></i> 30 Day Return Policy</li>
                                                 <li><i class="fi-rs-credit-card mr-5"></i> Cash on Delivery available</li>
                                             </ul>
@@ -112,9 +114,9 @@
                                                 <li><a href="#" data-color="Yellow"><span class="product-color-yellow"></span></a></li>
                                                 <li class="active"><a href="#" data-color="White"><span class="product-color-white"></span></a></li>
                                                 <li><a href="#" data-color="Orange"><span class="product-color-orange"></span></a></li>
-                                                <li><a href="#" data-color="Cyan"><span class="product-color-cyan"></span></a></li>
+                                               
                                                 <li><a href="#" data-color="Green"><span class="product-color-green"></span></a></li>
-                                                <li><a href="#" data-color="Purple"><span class="product-color-purple"></span></a></li>
+                                                
                                             </ul>
                                         </div>
                                         <div class="attr-detail attr-size">
@@ -123,8 +125,7 @@
                                                 <li><a href="#">S</a></li>
                                                 <li class="active"><a href="#">M</a></li>
                                                 <li><a href="#">L</a></li>
-                                                <li><a href="#">XL</a></li>
-                                                <li><a href="#">XXL</a></li>
+                                                
                                             </ul>
                                         </div>
                                         <div class="bt-1 border-color-1 mt-30 mb-30"></div>
@@ -137,10 +138,10 @@
                                             <div class="product-extra-link2">
                                                 <button type="submit" class="button button-add-to-cart">Add to cart</button>
                                                 <a aria-label="Add To Wishlist" class="action-btn hover-up" href="shop-wishlist.html"><i class="fi-rs-heart"></i></a>
-                                                <a aria-label="Compare" class="action-btn hover-up" href="shop-compare.html"><i class="fi-rs-shuffle"></i></a>
+                                                
                                             </div>
                                         </div>
-                                        
+                                    </form>
                                     </div>
                                     <!-- Detail Info -->
                                 </div>
