order placed, address empty in database

--- a/views/user/buy-now.ejs
+++ b/views/user/buy-now.ejs
@@ -354,7 +354,7 @@
                         
   
                         <div class="mt-3">
-                            <form action="/buy-now" method="get">
+                            <form action="/buy?orderId=<% order._id %>" method="get">
                                 
                                 
                                 <button type="submit" class="btn btn-success w-100 shadow-0 mb-2"> Make Purchase</button> 
